classDiagram

namespace guitool {
  class TabTemplate
}

namespace mtdomegui {
  class Model
  class Reporter
  class SignalOperationalMode
  class SignalTelemetry
}

Model *-- Reporter

Reporter *-- SignalOperationalMode : emit()
Reporter *-- SignalTelemetry : emit()

TabTemplate <|-- TabUtility

TabUtility *-- Model
TabUtility --> SignalOperationalMode : connect()
TabUtility --> SignalTelemetry : connect()
